# StudyPhysicsBot

./: .gitignore  Dockerfile  README.md  bot.py  config.py  data.py  db.py  docker-compose.yml  func.py  keyboards.py  pyproject.toml  states.py
assets/data/: elements.json  formulas.json  instruments.json  theories.json
configs/: .env.example  config_reader.py  settings.py
handlers/: math.py
handlers/exams/: device_exam.py  exam_main.py  form_exam.py  teor_exam.py
handlers/flash/: physic_device.py  physic_formuls.py  physic_teor.py
handlers/stats/: statistics.py
src/handlers/: __init__.py  exam.py  flashcard.py  math.py  start.py  statistics.py
src/handlers/base/: exam.py  flashcard.py  math.py
src/handlers/exams/: exam_formula.py  exam_instrument.py  exam_sciencer.py  exam_theory.py
src/handlers/flash/: flash_formula.py  flash_instrument.py  flash_sciencer.py  flash_theory.py
src/handlers/service/: statistics.py
src/handlers/stats/: statistics.py
src/keyboards/: __init__.py  keyboard_creator.py
src/models/: __init__.py  group.py  task.py  user.py
src/schemas/: colors.py
src/settings/: __init__.py  base.py
src/utils/: __init__.py  db_util.py  keyboard.py  message.py  messages.py  path_format.py  scheduler.py
src/utils/setup/: bot.py  commands.py  db.py  logging.py  routers.py
src/utils/states/: __init__.py  forms.py  main.py  task.py
src/utils/statistics/: __init__.py  calendar_map.py  diagram_map.py  stats_view.py
src/utils/tasks/: __init__.py  formula.py  instrument.py  loader.py  math.py  sciencer.py  theory.py
(+4 files in other folders)
